Added an access control option to limit the directory for maps files.
---- Changes since 1.310 ----
Added a Module Config option for the path to postsuper, which is used instead of assuming that it is in the PATH.
---- Changes since 1.330 ----
Postfix configuration parameters are read from main.cf directly, instead of calling the postconf command (which is slow).
---- Changes since 1.340 ----
Added Module Config options for stop, start and reload commands.
Allow map files are now checked when listing and editing virtusers and other map types.
---- Changes since 1.360 ----
Added the new SMTP Authentication And Encryption page for setting SASL and TLS related options.
---- Changes since 1.370 ----
Added a popup window for selecting a map source, rather than having to type in something like hash:/etc/postfix/virtual . This source can be an LDAP or MySQL database on Postfix systems that support it, which will trigger the automatic creation of a configuration file if needed.
Maps in MySQL and LDAP databases can be viewed and edited in the same way that those in regular files are, if the appropriate Perl modules are installed (DBI and DBD::mysql for MySQL, or Net::LDAP for LDAP). This also applies to email aliases.
---- Changes since 1.380 ----
Fixed a bug that prevented comments and manual map editing, and added back support for PCRE and BTREE maps.
Added a button for manually editing the aliases file.
Added more SMTP relaying restrictions.
---- Changes since 1.390 ----
Outgoing email from selected addresses and domains can now be BCCd automatically using the new BCC Mapping page.
---- Changes since 1.400 ----
Changed the default LDAP class for maps to inetLocalMailRecipient.
---- Changes since 1.410 ----
Added the SMTP Client Restrictions page, and replaced some oddly-designed UI fields on the SMTP Server Options page to it with more Webmin-standard inputs for configuring RBLs and client access.